# benchfs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  INSTALL_SUPERCOMPUTER.md  MPI_USAGE.md  OPERATION_TRACKING_IMPLEMENTATION.md  README.md  SETUP_IOR.md  TIMEOUT_CONFIGURATION.md  UCX_OPTIMIZATION_README.md  benchfs.toml  benchfs.toml.example  build.rs  install.sh  ior_outputs.json  test_mpi_config.sh  test_operation_tracking.sh  test_timeout_fix.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: code-refactoring-monitor.md  ior-docker-performance-expert.md  rust-doc-commenter.md
benches/: README.md  small.rs
c_client/: Makefile  README.md  benchfs_c_api.c  benchfs_client.c  benchfs_client.h  benchfs_mini_client.c  benchfs_mini_client.h  benchfs_mini_client_am.c  benchfs_mini_client_stream.c.bak  benchfs_ops.c  benchfs_protocol.h  test_client.c  test_worker_addr_exchange.c
claude_log/: 001_chfs_implementation_plan.md  007_phase2_implementation.md  010_server_and_metadata_rpc.md  013_complete_implementation_phase4.md  015_phase5_caching_implementation.md  017_phase7_distributed_foundation.md  018_phase8_async_distributed_complete.md  019_missing_implementations_analysis.md  022_CHFS_architecture_analysis.md  022_iouring_chunkstore_implementation.md  022_missing_implementations_plan.md  023_phase11_posix_and_metadata_update_complete.md  023_phase1_basic_features_complete.md  024_missing_implementations_work_log.md  024_performance_bottleneck_analysis.md  025_ior_integration_plan.md  027_ffi_implementation_progress.md  README_CHFS_EXPLORATION.md  TIMEOUT_FIX_UPDATE.md  benchfs_mini_plan.md  rpc_refactoring_plan.md  rpc_reply_ep_fix_20251031_052537.md  stream_rma_rpc_refactoring_plan.md
docs/: ARCHITECTURE_COMPARISON.md  BENCHFS_VS_CHFS_IO_ANALYSIS.md  CLAUDE.md  IMPLEMENTATION_CHANGELOG.md  INSTALL_SUPERCOMPUTER.md  IO500_ITER131_REPRODUCTION.md  IO_URING_READ_PERFORMANCE_ANALYSIS.md  SOCKET_CONNECTION_MODE.md  TIMEOUT_CONFIGURATION.md  papaer_draft.md  read_performance_investigation.md
docs/claude_log/: 001_chfs_implementation_plan.md  002_technical_decisions.md  003_koyama_hash_analysis.md  004_phase1_implementation_log.md  005_architecture_decision.md  006_test_fixes.md  008_phase3_implementation.md  009_data_rpc_implementation.md  011_rdma_transfer_implementation.md  012_rpc_server_handler_integration.md  014_registered_buffer_implementation.md  015_phase5_caching_implementation.md  016_phase6_server_daemon.md  017_phase7_distributed_foundation.md  018_phase8_async_distributed_complete.md  020_phase9_rpc_reply_routing_complete.md  021_missing_implementations_analysis.md  022_iouring_chunkstore_implementation.md  023_CHFS_BENCHFS_COMPARISON.md  023_phase1_basic_features_complete.md  024_ior_integration_missing_analysis.md  024_performance_bottleneck_analysis.md  024_phase1.2_rpc_error_handling_complete.md  026_ior_integration_implementation_checklist.md  OPERATION_TRACKING_IMPLEMENTATION.md  multi_rpc_performance_investigation.md
examples/: rpc_example.rs  rpc_server_example.rs.bak
ior_integration/: QUICKSTART.md  QUICKSTART_SUPERCOMPUTER.md  README.md  TROUBLESHOOTING.md  sync-benchfs.sh
ior_integration/benchfs_backend/: Makefile
ior_integration/benchfs_export/: README.txt  apply_benchfs_modifications.sh  benchfs_ior.patch
ior_integration/scripts/: export_benchfs_modifications.sh  mdtest_repro.c  run_ior_simple.sh  setup_ior.sh
jobs/: cleanup_scr.sh  cleanup_wrapper.sh
jobs/beeond/: beeond-job.sh  beeond.sh  default_params.conf  sirius-beeond-job.sh  sirius-beeond.sh
jobs/benchfs/: README.md  analyze_diagnostics.sh  analyze_iostat_during_run.sh  benchfs-job.sh  benchfs-perf-job.sh  benchfs-perf.sh  benchfs.sh  cancel-jobs.sh  common.sh  debug-job.sh  default_params.conf  extract.sh  extract_am_timing.sh  extract_io_depth_csv.sh  extract_io_timing_csv.sh  extract_iostat_csv.sh  extract_node_transfer_csv.sh  extract_rpc_concurrency_csv.sh  extract_rpc_transfer_csv.sh  extract_server_rpc_timing.sh  miyabi-benchfs-job.sh  miyabi-benchfs.sh  perf-debug-job.sh  perf-debug.sh  sirius-benchfs-job.sh  sirius-benchfs-perf-job.sh  sirius-benchfs-perf.sh  sirius-benchfs.sh  sirius-diag.sh  sirius-fio-baseline.sh  small_transfer_params.conf
jobs/chfs/: chfs-job.sh  chfs.sh  default_params.conf  miyabi-chfs-job.sh  miyabi-chfs.sh  sirius-chfs-job.sh  sirius-chfs.sh
jobs/io500/: abl_4way_submit.sh  sirius-io500-asan-debug-job.sh  sirius-io500-asan-debug.sh  sirius-io500-asan-singleton-job.sh  sirius-io500-job.sh  sirius-io500.sh  sirius-mdtest-direct-job.sh  sirius-mdtest-repro-job.sh
jobs/locusta/: sirius-benchfs-locusta-demo.sh  sirius-benchfsd-locusta-smoke.sh  sirius-cross-node-ping.sh  sirius-ior-locusta-smoke.sh  sirius-locusta-bench.sh
jobs/params/: README.md  chunk_comparison.conf  debug.conf  debug_large.conf  debug_small.conf  io500_compare.conf  io500_flags_ab.conf  large_scale.conf  minimal.conf  node_diagnosis.conf  ppn20_b16g.conf  scalability.conf  shared_file.conf  small_scale.conf  standard.conf  throughput.conf
jobs/profiles/: README.md  load_profile.sh  locusta_20phys.toml  (+7 more)
plot/: .gitignore  analyze_io_depth.py  analyze_io_timing.py  beeond_plot.ipynb  benchfs_analysis.ipynb  benchfsd_plot.ipynb  chfs_plot.ipynb  comparison_plot.ipynb  io_depth_analysis.ipynb  io_timing_analysis.ipynb  miyabi-benchfsd-plot.ipynb  node_transfer_analysis.ipynb  pyproject.toml  rpc_bench_analysis.ipynb  rpc_transfer_analysis.ipynb  time_metrics.ipynb
plot/plot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plot/processed/benchfsd/: ior_detail_2025.11.27-09.29.18-large_scale.json  ior_summary.json
plot/processed/rpc_bench/: rpc_server_results.json  rpc_summary.json
plot/processed/time_metrics/: ior_bandwidth.json
scripts/: debug-install.sh  repair_perf_data.py  run_perf_benchmark.sh  run_rpc_bench_local.sh  test_timeout_fix.sh
src/: benchfs_mini_lib.rs  config.rs  constants.rs  lib.rs  logging.rs  perfetto.rs  runtime_config.rs  stats.rs
tests/: daemon_communication.rs  pbt_filesystem.rs  simple_ffi_test.c
(+146 files in other folders)
