[package]
name = "benchfs"
version = "0.1.0"
edition = "2024"

[lib]
name = "benchfs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Async runtime (using local pluvio for development)
pluvio_runtime = { path = "lib/pluvio/pluvio_runtime" }
pluvio_uring = { path = "lib/pluvio/pluvio_uring" }
pluvio_timer = { path = "lib/pluvio/pluvio_timer" }
pluvio_ucx = { path = "lib/pluvio/pluvio_ucx" }

# Locusta RPC backend (ibverbs/mlx5 direct). Behind transport-locusta feature
# so that the default build path is unaffected during Phase 1 prototyping.
rrrpc = { path = "lib/locusta/rrrpc", optional = true }
mlx5  = { path = "lib/locusta/mlx5",  optional = true }

# Serialization
zerocopy = { version = "0.8.27", features = ["std", "derive"] }

# Hashing (Consistent Hashing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Cache (LRU)
lru = "0.12"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
chrono = "0.4"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-backtrace = "0.2"

# Error handling
thiserror = "2.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# System
libc = "0.2"
futures-timer = "3.0.3"
io-uring = "0.7.3"
gethostname = "0.5"

# FFI
once_cell = "1.19"

# MPI support
mpi = { version = "0.8", features = ["derive"], optional = true }

# Tracing output formats
tracing-perfetto = "0.1.5"  # Native Perfetto format with task-level tracks
tracing-chrome = "0.7"      # Chrome trace format (also viewable in Perfetto)
rand = "0.8"        # Used for track UUID generation
bytes = "1.11"      # For protobuf encoding
prost = "0.12"      # For protobuf encoding
thread-id = "4"     # For thread ID in Perfetto traces

# CLI
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
proptest-state-machine = "0.3"

[features]
default = []
mpi-support = ["mpi"]

# Enable the locusta (rrrpc / mlx5 DevX) transport backend.
# When enabled, `src/rpc/transport_locusta.rs` is compiled and exposes
# `LocustaTransport`. The runtime backend is selected at startup
# (env var `BENCHFS_TRANSPORT=locusta` or programmatic config).
transport-locusta = ["dep:rrrpc", "dep:mlx5"]

# Debug profile with full debug symbols for perf profiling
[profile.dev]
debug = 2                  # Full debug info (DWARF)
split-debuginfo = "off"    # Don't split debug info into .dwp files
strip = "none"             # Don't strip symbols

# Release profile with debug symbols for perf profiling
[profile.release]
debug = 2                  # Full debug info (DWARF)
split-debuginfo = "off"    # Don't split debug info into .dwp files
strip = "none"             # Don't strip symbols

[build-dependencies]
cc = "1.0"

[[bin]]
name = "benchfsd"
path = "src/bin/benchfsd.rs"

[[bin]]
name = "benchfsd_mpi"
path = "src/bin/benchfsd_mpi.rs"
required-features = ["mpi-support"]

[[bin]]
name = "benchfs_rpc_bench"
path = "src/bin/benchfs_rpc_bench.rs"
required-features = ["mpi-support"]

[[bin]]
name = "benchfs_perf"
path = "src/bin/benchfs_perf.rs"

[[bin]]
name = "benchfs_locusta_demo"
path = "src/bin/benchfs_locusta_demo.rs"
required-features = ["transport-locusta"]

# Benchmark configuration - currently disabled as benches/small.rs does not exist
# [[bench]]
# name = "small"
# harness = false
