[package]
name = "benchfs"
version = "0.1.0"
edition = "2024"

[lib]
name = "benchfs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Async runtime (using local pluvio for development)
pluvio_runtime = { path = "lib/pluvio/pluvio_runtime" }
pluvio_uring = { path = "lib/pluvio/pluvio_uring" }
pluvio_timer = { path = "lib/pluvio/pluvio_timer" }
pluvio_ucx = { path = "lib/pluvio/pluvio_ucx" }

# Locusta RPC backend (ibverbs/mlx5 direct). Behind transport-locusta feature
# so that the default build path is unaffected during Phase 1 prototyping.
rrrpc = { path = "lib/locusta/rrrpc", optional = true }
mlx5  = { path = "lib/locusta/mlx5",  optional = true }

# Serialization
zerocopy = { version = "0.8.27", features = ["std", "derive"] }

# Hashing (Consistent Hashing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Cache (LRU)
lru = "0.12"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
chrono = "0.4"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-backtrace = "0.2"

# Error handling
thiserror = "2.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UCX standalone-daemon mode infrastructure
slab = "0.4"
nix = { version = "0.30", features = ["mman", "fs"] }

# System
libc = "0.2"
futures-timer = "3.0.3"
io-uring = "0.7.3"
gethostname = "0.5"

# FFI
once_cell = "1.19"

# MPI support
mpi = { version = "0.8", features = ["derive"], optional = true }

# Tracing output formats
tracing-chrome = "0.7"      # Chrome trace format (also viewable in Perfetto)
rand = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

# Optional alternative allocator. mdtest-hard's tight create/write/close loop
# of 3901-byte writes fragments glibc's tcache enough to surface a
# pre-existing heap UB as `malloc(): unaligned tcache chunk detected` once
# total client ranks ≥ 16 (job 18044). mimalloc has segregated fast/slow
# free-lists per size class and does not chunk-coalesce, so the fragmentation
# pattern is different. Enable via `--features mimalloc-allocator` for
# debugging; the underlying bug should still be fixed.
mimalloc = { version = "0.1", optional = true, default-features = false }

# Heap profiler used to investigate the mdtest-hard heap corruption.
# Recording requires running with `BENCHFS_DHAT=<output.json>` so each
# rank writes its own profile. See `--features dhat-heap`.
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
proptest-state-machine = "0.3"

[features]
default = []
mpi-support = ["mpi"]

# Enable the locusta (rrrpc / mlx5 DevX) transport backend.
# When enabled, `src/rpc/transport_locusta.rs` is compiled and exposes
# `LocustaTransport`. The runtime backend is selected at startup
# (env var `BENCHFS_TRANSPORT=locusta` or programmatic config).
transport-locusta = ["dep:rrrpc", "dep:mlx5"]

# Use mimalloc as the global allocator instead of glibc malloc.
# Workaround for mdtest-hard's tcache-corruption symptom; see
# `project_mdtest_hard_heap_corruption.md` in memory.
mimalloc-allocator = ["dep:mimalloc"]

# Wire `dhat::Alloc` as the `#[global_allocator]` and start a heap
# profiler in `benchfs_init` that flushes to `$BENCHFS_DHAT` on
# `benchfs_finalize` (defaulting to `dhat-<pid>.json` in CWD).
# Use with `dhat-rs` viewer (e.g. https://nnethercote.github.io/dh_view/)
# to find the dominant allocation sites during mdtest-hard.
dhat-heap = ["dep:dhat"]

# Debug profile with full debug symbols for perf profiling
[profile.dev]
debug = 2                  # Full debug info (DWARF)
split-debuginfo = "off"    # Don't split debug info into .dwp files
strip = "none"             # Don't strip symbols

# Release profile with debug symbols for perf profiling
[profile.release]
debug = 2                  # Full debug info (DWARF)
split-debuginfo = "off"    # Don't split debug info into .dwp files
strip = "none"             # Don't strip symbols

[build-dependencies]
cc = "1.0"

[[bin]]
name = "benchfsd"
path = "src/bin/benchfsd.rs"

[[bin]]
name = "benchfsd_mpi"
path = "src/bin/benchfsd_mpi.rs"
required-features = ["mpi-support"]

[[bin]]
name = "benchfs_rpc_bench"
path = "src/bin/benchfs_rpc_bench.rs"
required-features = ["mpi-support"]

[[bin]]
name = "benchfs_perf"
path = "src/bin/benchfs_perf.rs"
