[project]
name = "plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"matplotlib>=3.8",
	"polars>=0.20",
	"pandas>=2.2",
	"notebook>=7.1",
	"pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = [
	"ipykernel>=6.29",
	"jupyterlab>=4.2",
]

[tool.uv]
package = true

