[project]
name = "plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
]

[tool.setuptools.packages.find]
include = ["plot*"]
exclude = ["fig*", "processed*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

